src/test/rustdoc-ui/doc-without-codeblock.stderr
error: missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:1:1
   |
LL | / #![deny(rustdoc::missing_doc_code_examples)]
LL | |
LL | | /// Some docs.
LL | |
...  |
LL | |     }
LL | | }
   | |_^
   |
note: the lint level is defined here
  --> $DIR/doc-without-codeblock.rs:1:9
   |
LL | #![deny(rustdoc::missing_doc_code_examples)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:7:1
   |
LL | /// And then, the princess died.
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:10:5
   |
LL |     /// Or maybe not because she saved herself!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing code example in this documentation
  --> $DIR/doc-without-codeblock.rs:3:1
   |
LL | /// Some docs.
   | ^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

